Bug 230392 - Details view never displays journal entries contrary to its description
Summary: Details view never displays journal entries contrary to its description
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-12 01:08 UTC by Sabine Faure
Modified: 2011-01-20 22:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-03-12 01:08:12 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Click on 'New Journal' button
- Select a calendar, enter a title, a date, a time, a description and a category for the journal entry.
- Click on 'Ok'
- The journal entry is not displayed in the agenda view. To see it go to View menu/Journal
- Click on the journal entry once to display information about it in the details view

Nothing happens contrary to the details view description 'Select an event, to-do or journal entry to view its details here'

However displaying information about journal entries in the details view would be very useful.
Especially when a lot of entries have been created because the Journal view would then only display a small portion of all of them.

Since it is impossible to display journal entry from the agenda view I would change the description of the details view to:
'Select an event, to-do to view its details here. 
Select a journal entry from the journal view to view its details here'

Trunk, Svn Rev 1101944
Comment 1 Sergio Martins 2011-01-20 22:31:58 UTC
Git commit 49002f7869808cbc8a85a2d0fa6a3b7a56b47c43 by Sergio Martins
Pushed by smartins into branch master

Fixed mouse event handling in journal view.

Double clicking a journal opens a new editor.
mousePress makes it appear in the incidence viewer.

BUG: 230392

M  +27   -5    korganizer/views/journalview/journalview.cpp     
M  +3    -1    korganizer/views/journalview/journalview.h     
M  +2    -0    korganizer/views/journalview/kojournalview.cpp     

http://commits.kde.org/ee6cc38b/49002f7869808cbc8a85a2d0fa6a3b7a56b47c43