Fixed mouse event handling in journal view.

Double clicking a journal opens a new editor.
mousePress makes it appear in the incidence viewer.

BUG: 230392